# swiperflix-gateway

./: .gitignore  Dockerfile  README.md  entrypoint.sh  example.env  pyproject.toml  quickstart.sh  requirements.txt
app/: config.py  db.py  main.py  models.py  openlist_client.py  schemas.py  sync.py  utils.py
